RealtimeOutgoing A/V sources should observe their sources only if having a sink https://bugs.webkit.org/show_bug.cgi?id=191490

Reviewed by Eric Carlson.

Source/WebCore:

Observe the source that generates media based on the sinks:
- Do not observe at creation time
- For first sink, start observing
- When no more sink, stop observing
Apply this principle for both outgoing audio and video sources.
Add locks for the sinks to ensure thread-safety.
Make sinks HashSet which is more robust.

Do some refactoring to better isolate generic outgoing sources from Cocoa/GTK implementations.

Covered by existing tests and updated webrtc/remove-track.html.

* platform/mediastream/RealtimeOutgoingAudioSource.cpp:
(WebCore::RealtimeOutgoingAudioSource::~RealtimeOutgoingAudioSource):
(WebCore::RealtimeOutgoingAudioSource::stop):
(WebCore::RealtimeOutgoingAudioSource::AddSink):
(WebCore::RealtimeOutgoingAudioSource::RemoveSink):
(WebCore::RealtimeOutgoingAudioSource::sendAudioFrames):
* platform/mediastream/RealtimeOutgoingAudioSource.h:
* platform/mediastream/RealtimeOutgoingVideoSource.cpp:
(WebCore::RealtimeOutgoingVideoSource::RealtimeOutgoingVideoSource):
(WebCore::RealtimeOutgoingVideoSource::~RealtimeOutgoingVideoSource):
(WebCore::RealtimeOutgoingVideoSource::observeSource):
(WebCore::RealtimeOutgoingVideoSource::setSource):
(WebCore::RealtimeOutgoingVideoSource::stop):
(WebCore::RealtimeOutgoingVideoSource::AddOrUpdateSink):
(WebCore::RealtimeOutgoingVideoSource::RemoveSink):
* platform/mediastream/RealtimeOutgoingVideoSource.h:
(WebCore::RealtimeOutgoingVideoSource::isSilenced const):
* platform/mediastream/gstreamer/RealtimeOutgoingAudioSourceLibWebRTC.cpp:
(WebCore::RealtimeOutgoingAudioSourceLibWebRTC::pullAudioData):
* platform/mediastream/mac/RealtimeOutgoingAudioSourceCocoa.cpp:
(WebCore::RealtimeOutgoingAudioSourceCocoa::RealtimeOutgoingAudioSourceCocoa):
(WebCore::RealtimeOutgoingAudioSourceCocoa::audioSamplesAvailable):
(WebCore::RealtimeOutgoingAudioSourceCocoa::pullAudioData):
* platform/mediastream/mac/RealtimeOutgoingAudioSourceCocoa.h:
* platform/mediastream/mac/RealtimeOutgoingVideoSourceCocoa.cpp:
(WebCore::RealtimeOutgoingVideoSourceCocoa::sampleBufferUpdated):

LayoutTests:

* webrtc/remove-track-expected.txt:
* webrtc/remove-track.html:
Add tests and fixed some flakiness issues on existing tests in the file.


Canonical link: https://commits.webkit.org/206313@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@238102 268f45cc-cd09-0410-ab3c-d52691b4dbfc